[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/options/Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -104.0
margin_right = 99.0
margin_bottom = 104.0
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 198.0
margin_bottom = 70.0
text = "OPTIONS"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 198.0
margin_bottom = 89.0
rect_min_size = Vector2( 50, 15 )

[node name="MasterVolumeOption" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 198.0
margin_bottom = 109.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/MasterVolumeOption"]
margin_top = 1.0
margin_right = 97.0
margin_bottom = 15.0
text = "Master Volume"
align = 1
valign = 1

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeOption"]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 16.0
rect_min_size = Vector2( 97, 0 )
min_value = -80.0
max_value = 0.0
tick_count = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 198.0
margin_bottom = 128.0
rect_min_size = Vector2( 50, 15 )

[node name="SaveExitButton" type="Button" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 198.0
margin_bottom = 152.0
rect_min_size = Vector2( 100, 0 )
text = "Save and Exit"

[connection signal="value_changed" from="VBoxContainer/MasterVolumeOption/MasterVolumeSlider" to="." method="_on_MasterVolumeSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/SaveExitButton" to="." method="_on_SaveExitButton_pressed"]
